deployment/api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: peerprep-api-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-path-prefix: "/api/"
spec:
  rules:
    - host: 'peerprep.live'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080
