deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: peerprep-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/affinity: 'cookie'
    nginx.ingress.kubernetes.io/session-cookie-name: 'route'
    nginx.ingress.kubernetes.io/session-cookie-expires: '172800'
    nginx.ingress.kubernetes.io/session-cookie-max-age: '172800' 
spec:
  rules:
    - http:
        paths:
          # - path: /matching
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: matching
          #       port:
          #         number: 8001
          # - path: /user
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: user
          #       port:
          #         number: 8000
          # - path: /coding
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: coding
          #       port:
          #         number: 8002
          # - path: /question
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: question
          #       port:
          #         number: 8004
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  number: 80
